# l10n-preview

./: README.md  l10n-preview_0.1.0-1_all.deb  l10n-preview_0.2.1_all.deb  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml
.tx/: config
build-new/: l10n-preview_0.2.1_all.deb
build-new/l10n-preview_0.2.1_all/DEBIAN/: control
build-new/l10n-preview_0.2.2_all/DEBIAN/: control
build-new/l10n-preview_0.2.2_all/usr/lib/python3/dist-packages/l10n_preview/: po_parser.py
build-new/l10n-preview_0.2.2_all/usr/share/applications/: se.danielnylander.l10n-preview.desktop
build-new/l10n-preview_0.2.2_all/usr/share/locale/sv/LC_MESSAGES/: l10n-preview.mo
data/: se.danielnylander.l10n-preview.desktop  se.danielnylander.l10n-preview.desktop.in
data/man/: l10n-preview.1
debian/: control
po/: README.md  l10n-preview.pot  sv.mo  sv.po
po/man/: l10n-preview.1.pot  sv.po
po/sv/LC_MESSAGES/: l10n-preview.mo
rpm-build/l10n-preview_0.2.1/usr/lib/python3/dist-packages/l10n_preview/: __init__.py
src/l10n_preview/: __init__.py  main.py
